# zaap.sh

./: .gitignore  README.md  build_protocol.sh  docker-compose.yml  go.mod  go.sum  obj.yaml  schema.graphql
app/: .eslintrc.json  package.json
demo/: docker-compose.yml
envoy/: envoy.yaml
kubernetes/: install_certmanager.sh
protocol/: app.pb  app.pb.go  app.proto  build.sh  scheduler.proto
scripts/: build_protocol.sh
web/: package.json
website/: .gitignore  next.config.js  package.json
zaap-apiserver/: .generators  .rakeTasks  Gemfile
zaap-app/: .eslintrc.js  Dockerfile  babel.config.js  package.json  webpack.config.js
zaap-daemon/: go.mod
zaap-runner/: Cargo.toml  Dockerfile  Makefile  README.md  forward_socket.sh  go.mod  go.sum
zaap-runner/cmd/: main.go
zaap-runner/internal/runner/: application_delete.go  application_deploy.go  application_logs.go  application_status.go  cluster_roles.go  configuration.go  deployment.go  events.go  image_pull_secrets.go  logs.go  ping.go  runner.go
zaap-runner/internal/runner/config/: config.go
zaap-runner/internal/scheduler/: scheduler.go
zaap-runner/pkg/docker/: client.go  convert.go
zaap-runner/pkg/kubernetes/: client.go  cluster_role.go  cluster_role_binding.go  convert.go  deployment.go  deployment_logs.go  deployment_status.go  events.go  ingress.go  logs.go  secret.go  service.go  service_account.go  status.go
zaap-runner/pkg/protocol/: runner.pb.go  runner.proto
zaap-runner/pkg/runnerpb/: runner.pb.go
zaap-runner/proto/: runner.proto
zaap-runner/src/: auth.rs  main.rs  server.rs
(+532 files in other folders)
