[package]
name = "zaap-runner"
version = "0.1.0"
authors = ["Rémi Caumette <remicaumette@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.33.0"
tokio = { version = "0.2.19", features = ["full"] }
k8s-openapi = { version = "0.7.1", features = ["v1_14"] }
serde = "1.0.106"
serde_json = "1.0.52"
prost = "0.6.1"
tonic = "0.2.0"
prost-types = "0.6.1"

[build-dependencies]
tonic-build = "0.2.0"
